--- a/wiki/pl/FEM_ConstraintElectrostaticPotential.html
+++ b/wiki/pl/FEM_ConstraintElectrostaticPotential.html
@@ -3,7 +3,7 @@
 <li><a href="../FEM_ConstraintElectrostaticPotential.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="FEM ConstraintElectrostaticPotential (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--high" title="FEM Potentiel &eacute;lectrostatique (76% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--med" title="FEM: Potenziale elettrostatico di vincolo (18% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="pl" dir="ltr">polski</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="pl" dir="ltr">polski</span></li>
 <li><a href="../pt-br/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--med" title="Restri&ccedil;&atilde;o de potencial eletrost&aacute;tico (18% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ru/FEM_ConstraintElectrostaticPotential.html" class="mw-pt-progress mw-pt-progress--med" title="FEM &#1057;&#1086;&#1079;&#1076;&#1072;&#1090;&#1100; &#1101;&#1083;&#1077;&#1082;&#1090;&#1088;&#1086;&#1089;&#1090;&#1072;&#1090;&#1080;&#1095;&#1077;&#1089;&#1082;&#1080;&#1081; &#1087;&#1086;&#1090;&#1077;&#1085;&#1094;&#1080;&#1072;&#1083; (24% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div class="docnav">
@@ -105,9 +105,7 @@
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Uwagi">Uwagi</span></h2>
-<div class="mw-translate-fuzzy">
-<ul><li>Opcje Jednostka przepustowa, Niesko&#324;czono&#347;&#263; elektryczna i Definicja potencja&#322;u elektrostatycznego s&#261; charakterystyczne dla solvera Elmer i nie dzia&#322;aj&#261; z solverem CalculiX.</li></ul>
-</div>
+<ul><li>Opcje Jednostka przepustowa, Niesko&#324;czono&#347;&#263; elektryczna (<span style="font-size:small;color:green;">wersja 1.2 i powy&#380;ej</span>: Pole dalekie) i Definicja potencja&#322;u elektrostatycznego s&#261; charakterystyczne dla solvera Elmer i nie dzia&#322;aj&#261; z solverem CalculiX.</li></ul>
 <p><br>
 </p>
 <div class="docnav">
@@ -156,35 +154,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126100141
+Cached time: 20260126100202
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.085 seconds
-Real time usage: 0.123 seconds
-Preprocessor visited node count: 402/1000000
-Post&#8208;expand include size: 25922/2097152 bytes
-Template argument size: 10420/2097152 bytes
+CPU time usage: 0.107 seconds
+Real time usage: 0.143 seconds
+Preprocessor visited node count: 406/1000000
+Post&#8208;expand include size: 25993/2097152 bytes
+Template argument size: 10423/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1796/5000000 bytes
+Unstrip post&#8208;expand size: 1800/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.694      1 -total
- 42.58%   12.645      1 Template:GuiCommandContainer
- 23.24%    6.901      1 Template:GuiCommandFemInfo/pl
- 17.74%    5.269      1 Template:FEM_Tools_navi/pl
- 11.50%    3.414      2 Template:Docnav
- 10.95%    3.252      1 Template:GuiCommand/pl
-  9.48%    2.815      2 Template:Navigation_menu_2
-  6.39%    1.897      7 Template:Version/pl
-  6.37%    1.892      1 Template:VersionMinus/pl
-  5.55%    1.648      1 Template:Userdocnavi/pl
+100.00%   37.040      1 -total
+ 32.85%   12.168      1 Template:GuiCommandContainer
+ 21.11%    7.819      1 Template:FEM_Tools_navi/pl
+ 18.09%    6.700      1 Template:GuiCommandFemInfo/pl
+ 12.85%    4.760      2 Template:Navigation_menu_2
+ 10.51%    3.891      7 Template:Version/pl
+  8.61%    3.190      1 Template:GuiCommand/pl
+  7.76%    2.876      1 Template:Userdocnavi/pl
+  7.60%    2.815      2 Template:Docnav
+  6.20%    2.296      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:273093-0!canonical and timestamp 20260126100141 and revision id 1744194. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:273093-0!canonical and timestamp 20260126100201 and revision id 1744196. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
