--- a/wiki/bg/Object_name.html
+++ b/wiki/bg/Object_name.html
@@ -19,14 +19,16 @@
 </p><p><span id="Names"></span>
 </p>
 <h2><span id=".D0.91.D0.B5.D0.BB.D0.B5.D0.B6.D0.BA.D0.B8"></span><span class="mw-headline" id="&#1041;&#1077;&#1083;&#1077;&#1078;&#1082;&#1080;">&#1041;&#1077;&#1083;&#1077;&#1078;&#1082;&#1080;</span></h2>
-<p>There are various properties for Names:
+<div class="mw-translate-fuzzy">
+<p>&#1048;&#1084;&#1072; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072; &#1085;&#1072; &#1080;&#1084;&#1077;&#1090;&#1086;:
 </p>
-<ul><li>The <code>Name</code> can only include simple alphanumeric characters, and the underscore, <code>[_0-9a-zA-Z]</code>.</li>
-<li>The <code>Name</code> cannot start with a number; it must start with a letter or the underscore, <code>[_a-zA-Z]</code>.</li>
-<li>The <code>Name</code> is assigned at the creation time of the object; afterwards it is no longer editable. The object can never be renamed.</li>
-<li>The <code>Name</code> must be unique in the entire document. It doesn't matter if two objects are of completely different types, for example, one is a <a href="../PartDesign_Pocket.html" title="PartDesign Pocket">PartDesign Pocket</a> and the other is an <a href="../Arch_Wall.html" title="Arch Wall">Arch Wall</a>. They must have different names.</li>
-<li>When creating an object of the same type, normally the name is increased with a sequential number, thus <code>Box</code>, <code>Box001</code>, <code>Box002</code>, etc. This prevents naming collision.</li>
-<li>Once the object is deleted, its <code>Name</code> becomes available to be used by a newly created object. This means that if <code>Box</code>, <code>Box001</code>, and <code>Box002</code> exist, and we delete the first item, the next box created with <a href="../Part_Box.html" title="Part Box">Part Box</a> will not be <code>Box003</code>, it will be <code>Box</code> again, because this string is available to be used once more. Notice that it is not possible to rename <code>Box001</code> or <code>Box002</code> to <code>Box</code> since their names are fixed.</li></ul>
+<ul><li><code>Name</code> &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072; &#1089;&#1072;&#1084;&#1086; &#1087;&#1088;&#1086;&#1089;&#1090;&#1080; &#1073;&#1091;&#1082;&#1074;&#1077;&#1085;&#1086;-&#1094;&#1080;&#1092;&#1088;&#1086;&#1074;&#1080; &#1079;&#1085;&#1072;&#1094;&#1080; &#1080; &#1076;&#1086;&#1083;&#1085;&#1072; &#1095;&#1077;&#1088;&#1090;&#1072;, <code>[_0-9a-zA-zA-Z]</code>.</li>
+<li><code>Name</code> &#1085;&#1077; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1079;&#1072;&#1087;&#1086;&#1095;&#1085;&#1077; &#1089; &#1095;&#1080;&#1089;&#1083;&#1086;; &#1090;&#1088;&#1103;&#1073;&#1074;&#1072; &#1076;&#1072; &#1079;&#1072;&#1087;&#1086;&#1095;&#1085;&#1077; &#1089; &#1073;&#1091;&#1082;&#1074;&#1072; &#1080;&#1083;&#1080; &#1076;&#1086;&#1083;&#1085;&#1072;&#1090;&#1072; &#1095;&#1077;&#1088;&#1090;&#1072;, <code>[_a-zA-Z]</code>.</li>
+<li><code>Name</code> &#1089;&#1077; &#1087;&#1088;&#1080;&#1089;&#1074;&#1086;&#1103;&#1074;&#1072; &#1087;&#1086; &#1074;&#1088;&#1077;&#1084;&#1077; &#1085;&#1072; &#1089;&#1098;&#1079;&#1076;&#1072;&#1074;&#1072;&#1085;&#1077;&#1090;&#1086; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1072;; &#1089;&#1083;&#1077;&#1076; &#1090;&#1086;&#1074;&#1072; &#1090;&#1086; &#1074;&#1077;&#1095;&#1077; &#1085;&#1077; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1089;&#1077; &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072;. &#1054;&#1073;&#1077;&#1082;&#1090;&#1098;&#1090; &#1085;&#1080;&#1082;&#1086;&#1075;&#1072; &#1085;&#1077; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1073;&#1098;&#1076;&#1077; &#1087;&#1088;&#1077;&#1080;&#1084;&#1077;&#1085;&#1091;&#1074;&#1072;&#1085;.</li>
+<li><code>Name</code> &#1090;&#1088;&#1103;&#1073;&#1074;&#1072; &#1076;&#1072; &#1073;&#1098;&#1076;&#1077; &#1091;&#1085;&#1080;&#1082;&#1072;&#1083;&#1085;&#1086; &#1074; &#1094;&#1077;&#1083;&#1080;&#1103; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;. &#1053;&#1103;&#1084;&#1072; &#1079;&#1085;&#1072;&#1095;&#1077;&#1085;&#1080;&#1077; &#1076;&#1072;&#1083;&#1080; &#1076;&#1074;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1072; &#1089;&#1072; &#1086;&#1090; &#1089;&#1098;&#1074;&#1089;&#1077;&#1084; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1090;&#1080;&#1087;&#1086;&#1074;&#1077;, &#1085;&#1072;&#1087;&#1088;&#1080;&#1084;&#1077;&#1088;, &#1077;&#1076;&#1080;&#1085;&#1080;&#1103;&#1090; &#1077; <a href="../PartDesign_Pocket.html" title="PartDesign Pocket">PartDesign Pocket</a>, &#1072; &#1076;&#1088;&#1091;&#1075;&#1080;&#1103;&#1090; &#1077; <a href="../Arch_Wall.html" title="Arch Wall">Arch Wall</a>. &#1058;&#1088;&#1103;&#1073;&#1074;&#1072; &#1076;&#1072; &#1080;&#1084;&#1072;&#1090; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1080;&#1084;&#1077;&#1085;&#1072;.</li>
+<li>&#1055;&#1088;&#1080; &#1089;&#1098;&#1079;&#1076;&#1072;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090; &#1086;&#1090; &#1089;&#1098;&#1097;&#1080;&#1103; &#1090;&#1080;&#1087;, &#1086;&#1073;&#1080;&#1082;&#1085;&#1086;&#1074;&#1077;&#1085;&#1086; &#1082;&#1098;&#1084; &#1080;&#1084;&#1077;&#1090;&#1086; &#1089;&#1077; &#1076;&#1086;&#1073;&#1072;&#1074;&#1103; &#1091;&#1074;&#1077;&#1083;&#1080;&#1095;&#1072;&#1074;&#1072;&#1097; &#1089;&#1077; &#1087;&#1086;&#1089;&#1083;&#1077;&#1076;&#1086;&#1074;&#1072;&#1090;&#1077;&#1083;&#1077;&#1085; &#1085;&#1086;&#1084;&#1077;&#1088;, &#1087;&#1086; &#1090;&#1086;&#1079;&#1080; &#1085;&#1072;&#1095;&#1080;&#1085; <code>Box</code>, <code>Box001</code>, <code>Box0012</code> &#1080; &#1090;.&#1085;. &#1058;&#1086;&#1074;&#1072; &#1087;&#1088;&#1077;&#1076;&#1086;&#1090;&#1074;&#1088;&#1072;&#1090;&#1103;&#1074;&#1072; &#1082;&#1086;&#1085;&#1092;&#1083;&#1080;&#1082;&#1090;&#1080; &#1089; &#1080;&#1084;&#1077;&#1085;&#1072;&#1090;&#1072;.</li>
+<li>&#1057;&#1083;&#1077;&#1076; &#1082;&#1072;&#1090;&#1086; &#1086;&#1073;&#1077;&#1082;&#1090;&#1098;&#1090; &#1073;&#1098;&#1076;&#1077; &#1080;&#1079;&#1090;&#1088;&#1080;&#1090;, &#1085;&#1077;&#1075;&#1086;&#1074;&#1086;&#1090;&#1086; &#1080;&#1084;&#1077; <code>Name</code> &#1089;&#1090;&#1072;&#1074;&#1072; &#1076;&#1086;&#1089;&#1090;&#1098;&#1087;&#1085;&#1086; &#1079;&#1072; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1085;&#1077; &#1086;&#1090; &#1085;&#1086;&#1074;&#1086;&#1089;&#1098;&#1079;&#1076;&#1072;&#1076;&#1077;&#1085; &#1086;&#1073;&#1077;&#1082;&#1090;. &#1058;&#1086;&#1074;&#1072; &#1086;&#1079;&#1085;&#1072;&#1095;&#1072;&#1074;&#1072;, &#1095;&#1077; &#1072;&#1082;&#1086; <code>Box</code>, <code>Box001</code>}, &#1080; <code>Box002</code> &#1089;&#1098;&#1097;&#1077;&#1089;&#1090;&#1074;&#1091;&#1074;&#1072;&#1090;, &#1080; &#1080;&#1079;&#1090;&#1088;&#1080;&#1077;&#1084; &#1087;&#1098;&#1088;&#1074;&#1080;&#1103; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;, &#1089;&#1083;&#1077;&#1076;&#1074;&#1072;&#1097;&#1086;&#1090;&#1086; &#1087;&#1086;&#1083;&#1077;, &#1089;&#1098;&#1079;&#1076;&#1072;&#1076;&#1077;&#1085;&#1086; &#1089; <a href="../Part_Box.html" title="Part Box">Part Box</a>, &#1085;&#1103;&#1084;&#1072; &#1076;&#1072; &#1073;&#1098;&#1076;&#1077; <code>Box003</code>, &#1072; &#1097;&#1077; &#1073;&#1098;&#1076;&#1077; &#1086;&#1090;&#1085;&#1086;&#1074;&#1086; <code>Box</code>, &#1079;&#1072;&#1097;&#1086;&#1090;&#1086; &#1090;&#1086;&#1079;&#1080; &#1085;&#1080;&#1079; &#1077; &#1085;&#1072;&#1083;&#1080;&#1095;&#1077;&#1085;, &#1079;&#1072; &#1076;&#1072; &#1089;&#1077; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; &#1086;&#1090;&#1085;&#1086;&#1074;&#1086;. &#1047;&#1072;&#1073;&#1077;&#1083;&#1077;&#1078;&#1077;&#1090;&#1077;, &#1095;&#1077; &#1085;&#1077; &#1077; &#1074;&#1098;&#1079;&#1084;&#1086;&#1078;&#1085;&#1086; &#1076;&#1072; &#1087;&#1088;&#1077;&#1080;&#1084;&#1077;&#1085;&#1091;&#1074;&#1072;&#1090;&#1077; <code>Box001</code> &#1080;&#1083;&#1080; <code>Box002</code> &#1085;&#1072; <code>Box</code>, &#1090;&#1098;&#1081; &#1082;&#1072;&#1090;&#1086; &#1080;&#1084;&#1077;&#1085;&#1072;&#1090;&#1072; &#1089;&#1072; &#1092;&#1080;&#1082;&#1089;&#1080;&#1088;&#1072;&#1085;&#1080;.</li></ul>
+</div>
 <p>In summary, the <code>Name</code> essentially acts like a unique identifier (UID) for an object. Since a unique <code>Name</code> is very restrictive, all objects also have a <code>Label</code> property which allows "renaming" the object to something more descriptive. The internal <code>Name</code> actually remains fixed, but the user editable <code>Label</code> can be used in most situations where the <code>Name</code> would be used. In common usage in the program and the documentation, "renaming" means changing the <code>Label</code> and not the actual <code>Name</code> of the object.
 </p>
 <h2><span class="mw-headline" id="Labels">Labels</span></h2>
@@ -115,15 +117,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126095815
+Cached time: 20260126100816
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.065 seconds
-Real time usage: 0.089 seconds
-Preprocessor visited node count: 710/1000000
-Post&#8208;expand include size: 9268/2097152 bytes
-Template argument size: 3249/2097152 bytes
+CPU time usage: 0.068 seconds
+Real time usage: 0.107 seconds
+Preprocessor visited node count: 711/1000000
+Post&#8208;expand include size: 9272/2097152 bytes
+Template argument size: 3253/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 5/100
 Unstrip recursion depth: 0/20
@@ -131,19 +133,19 @@ Unstrip post&#8208;expand size: 6904/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.219      1 -total
- 23.16%    5.608      1 Template:Userdocnavi/bg
- 14.29%    3.462      1 Template:PropertyData
- 13.73%    3.325     78 Template:Incode
- 12.49%    3.024      5 Template:Code
-  9.23%    2.236      1 Template:Navigation_menu_2
-  6.96%    1.685      1 Template:Variable
-  6.95%    1.683      4 Template:KEY
-  6.22%    1.506      3 Template:MenuCommand
-  5.72%    1.386      1 Template:TOCright
+100.00%   28.611      1 -total
+ 19.10%    5.466      1 Template:Userdocnavi/bg
+ 14.89%    4.260     78 Template:Incode
+ 12.86%    3.678      5 Template:Code
+ 10.86%    3.108      1 Template:PropertyData
+ 10.20%    2.919      1 Template:TOCright
+  8.99%    2.572      4 Template:KEY
+  7.33%    2.098      1 Template:Navigation_menu_2
+  5.79%    1.657      3 Template:MenuCommand
+  5.27%    1.507      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412656-0!canonical and timestamp 20260126095815 and revision id 1744188. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412656-0!canonical and timestamp 20260126100816 and revision id 1744198. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
