--- a/wiki/bg/Object_name.html
+++ b/wiki/bg/Object_name.html
@@ -29,7 +29,7 @@
 <li>&#1055;&#1088;&#1080; &#1089;&#1098;&#1079;&#1076;&#1072;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090; &#1086;&#1090; &#1089;&#1098;&#1097;&#1080;&#1103; &#1090;&#1080;&#1087;, &#1086;&#1073;&#1080;&#1082;&#1085;&#1086;&#1074;&#1077;&#1085;&#1086; &#1082;&#1098;&#1084; &#1080;&#1084;&#1077;&#1090;&#1086; &#1089;&#1077; &#1076;&#1086;&#1073;&#1072;&#1074;&#1103; &#1091;&#1074;&#1077;&#1083;&#1080;&#1095;&#1072;&#1074;&#1072;&#1097; &#1089;&#1077; &#1087;&#1086;&#1089;&#1083;&#1077;&#1076;&#1086;&#1074;&#1072;&#1090;&#1077;&#1083;&#1077;&#1085; &#1085;&#1086;&#1084;&#1077;&#1088;, &#1087;&#1086; &#1090;&#1086;&#1079;&#1080; &#1085;&#1072;&#1095;&#1080;&#1085; <code>Box</code>, <code>Box001</code>, <code>Box0012</code> &#1080; &#1090;.&#1085;. &#1058;&#1086;&#1074;&#1072; &#1087;&#1088;&#1077;&#1076;&#1086;&#1090;&#1074;&#1088;&#1072;&#1090;&#1103;&#1074;&#1072; &#1082;&#1086;&#1085;&#1092;&#1083;&#1080;&#1082;&#1090;&#1080; &#1089; &#1080;&#1084;&#1077;&#1085;&#1072;&#1090;&#1072;.</li>
 <li>&#1057;&#1083;&#1077;&#1076; &#1082;&#1072;&#1090;&#1086; &#1086;&#1073;&#1077;&#1082;&#1090;&#1098;&#1090; &#1073;&#1098;&#1076;&#1077; &#1080;&#1079;&#1090;&#1088;&#1080;&#1090;, &#1085;&#1077;&#1075;&#1086;&#1074;&#1086;&#1090;&#1086; &#1080;&#1084;&#1077; <code>Name</code> &#1089;&#1090;&#1072;&#1074;&#1072; &#1076;&#1086;&#1089;&#1090;&#1098;&#1087;&#1085;&#1086; &#1079;&#1072; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1085;&#1077; &#1086;&#1090; &#1085;&#1086;&#1074;&#1086;&#1089;&#1098;&#1079;&#1076;&#1072;&#1076;&#1077;&#1085; &#1086;&#1073;&#1077;&#1082;&#1090;. &#1058;&#1086;&#1074;&#1072; &#1086;&#1079;&#1085;&#1072;&#1095;&#1072;&#1074;&#1072;, &#1095;&#1077; &#1072;&#1082;&#1086; <code>Box</code>, <code>Box001</code>}, &#1080; <code>Box002</code> &#1089;&#1098;&#1097;&#1077;&#1089;&#1090;&#1074;&#1091;&#1074;&#1072;&#1090;, &#1080; &#1080;&#1079;&#1090;&#1088;&#1080;&#1077;&#1084; &#1087;&#1098;&#1088;&#1074;&#1080;&#1103; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;, &#1089;&#1083;&#1077;&#1076;&#1074;&#1072;&#1097;&#1086;&#1090;&#1086; &#1087;&#1086;&#1083;&#1077;, &#1089;&#1098;&#1079;&#1076;&#1072;&#1076;&#1077;&#1085;&#1086; &#1089; <a href="../Part_Box.html" title="Part Box">Part Box</a>, &#1085;&#1103;&#1084;&#1072; &#1076;&#1072; &#1073;&#1098;&#1076;&#1077; <code>Box003</code>, &#1072; &#1097;&#1077; &#1073;&#1098;&#1076;&#1077; &#1086;&#1090;&#1085;&#1086;&#1074;&#1086; <code>Box</code>, &#1079;&#1072;&#1097;&#1086;&#1090;&#1086; &#1090;&#1086;&#1079;&#1080; &#1085;&#1080;&#1079; &#1077; &#1085;&#1072;&#1083;&#1080;&#1095;&#1077;&#1085;, &#1079;&#1072; &#1076;&#1072; &#1089;&#1077; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; &#1086;&#1090;&#1085;&#1086;&#1074;&#1086;. &#1047;&#1072;&#1073;&#1077;&#1083;&#1077;&#1078;&#1077;&#1090;&#1077;, &#1095;&#1077; &#1085;&#1077; &#1077; &#1074;&#1098;&#1079;&#1084;&#1086;&#1078;&#1085;&#1086; &#1076;&#1072; &#1087;&#1088;&#1077;&#1080;&#1084;&#1077;&#1085;&#1091;&#1074;&#1072;&#1090;&#1077; <code>Box001</code> &#1080;&#1083;&#1080; <code>Box002</code> &#1085;&#1072; <code>Box</code>, &#1090;&#1098;&#1081; &#1082;&#1072;&#1090;&#1086; &#1080;&#1084;&#1077;&#1085;&#1072;&#1090;&#1072; &#1089;&#1072; &#1092;&#1080;&#1082;&#1089;&#1080;&#1088;&#1072;&#1085;&#1080;.</li></ul>
 </div>
-<p>In summary, the <code>Name</code> essentially acts like a unique identifier (UID) for an object. Since a unique <code>Name</code> is very restrictive, all objects also have a <code>Label</code> property which allows "renaming" the object to something more descriptive. The internal <code>Name</code> actually remains fixed, but the user editable <code>Label</code> can be used in most situations where the <code>Name</code> would be used. In common usage in the program and the documentation, "renaming" means changing the <code>Label</code> and not the actual <code>Name</code> of the object.
+<p>&#1042; &#1086;&#1073;&#1086;&#1073;&#1097;&#1077;&#1085;&#1080;&#1077;, <code>Name</code> &#1087;&#1086; &#1089;&#1098;&#1097;&#1077;&#1089;&#1090;&#1074;&#1086; &#1076;&#1077;&#1081;&#1089;&#1090;&#1074;&#1072; &#1082;&#1072;&#1090;&#1086; &#1091;&#1085;&#1080;&#1082;&#1072;&#1083;&#1077;&#1085; &#1080;&#1076;&#1077;&#1085;&#1090;&#1080;&#1092;&#1080;&#1082;&#1072;&#1090;&#1086;&#1088; (UID) &#1079;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;. &#1058;&#1098;&#1081; &#1082;&#1072;&#1090;&#1086; &#1091;&#1085;&#1080;&#1082;&#1072;&#1083;&#1085;&#1086;&#1090;&#1086; &#1080;&#1084;&#1077; <code>Name</code> &#1077; &#1084;&#1085;&#1086;&#1075;&#1086; &#1086;&#1075;&#1088;&#1072;&#1085;&#1080;&#1095;&#1080;&#1090;&#1077;&#1083;&#1085;&#1086;, &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1089;&#1098;&#1097;&#1086; &#1080;&#1084;&#1072;&#1090; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086; <code>Label</code>, &#1082;&#1086;&#1077;&#1090;&#1086; &#1087;&#1086;&#1079;&#1074;&#1086;&#1083;&#1103;&#1074;&#1072; "&#1087;&#1088;&#1077;&#1080;&#1084;&#1077;&#1085;&#1091;&#1074;&#1072;&#1085;&#1077;" &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1072; &#1085;&#1072; &#1085;&#1077;&#1097;&#1086; &#1087;&#1086;-&#1086;&#1087;&#1080;&#1089;&#1072;&#1090;&#1077;&#1083;&#1085;&#1086;. &#1042;&#1098;&#1090;&#1088;&#1077;&#1096;&#1085;&#1086;&#1090;&#1086; &#1080;&#1084;&#1077; <code>Name</code> &#1074;&#1089;&#1098;&#1097;&#1085;&#1086;&#1089;&#1090; &#1086;&#1089;&#1090;&#1072;&#1074;&#1072; &#1092;&#1080;&#1082;&#1089;&#1080;&#1088;&#1072;&#1085;&#1086;, &#1085;&#1086; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1103;&#1090; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072; <code>Label</code>, &#1080; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1089;&#1077; &#1075;&#1086; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; &#1074; &#1087;&#1086;&#1074;&#1077;&#1095;&#1077;&#1090;&#1086; &#1089;&#1080;&#1090;&#1091;&#1072;&#1094;&#1080;&#1080;, &#1074; &#1082;&#1086;&#1080;&#1090;&#1086; &#1097;&#1077; &#1089;&#1077; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; &#1080; <code>Name</code>. &#1042; &#1086;&#1073;&#1097;&#1072; &#1091;&#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1072; &#1074; &#1087;&#1088;&#1086;&#1075;&#1088;&#1072;&#1084;&#1072;&#1090;&#1072; &#1080; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1072;&#1094;&#1080;&#1103;&#1090;&#1072;, "&#1087;&#1088;&#1077;&#1080;&#1084;&#1077;&#1085;&#1091;&#1074;&#1072;&#1085;&#1077;" &#1086;&#1079;&#1085;&#1072;&#1095;&#1072;&#1074;&#1072; &#1087;&#1088;&#1086;&#1084;&#1103;&#1085;&#1072; &#1085;&#1072; <code>Label</code>, &#1072; &#1085;&#1077; &#1076;&#1077;&#1081;&#1089;&#1090;&#1074;&#1080;&#1090;&#1077;&#1083;&#1085;&#1086;&#1090;&#1086; &#1080;&#1084;&#1077; <code>Name</code> &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1072;.
 </p>
 <h2><span class="mw-headline" id="Labels">Labels</span></h2>
 <p>There are various properties for Labels:
@@ -117,12 +117,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126100816
+Cached time: 20260126101145
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.068 seconds
-Real time usage: 0.107 seconds
+CPU time usage: 0.069 seconds
+Real time usage: 0.182 seconds
 Preprocessor visited node count: 711/1000000
 Post&#8208;expand include size: 9272/2097152 bytes
 Template argument size: 3253/2097152 bytes
@@ -133,19 +133,19 @@ Unstrip post&#8208;expand size: 6904/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.611      1 -total
- 19.10%    5.466      1 Template:Userdocnavi/bg
- 14.89%    4.260     78 Template:Incode
- 12.86%    3.678      5 Template:Code
- 10.86%    3.108      1 Template:PropertyData
- 10.20%    2.919      1 Template:TOCright
-  8.99%    2.572      4 Template:KEY
-  7.33%    2.098      1 Template:Navigation_menu_2
-  5.79%    1.657      3 Template:MenuCommand
-  5.27%    1.507      1 Template:Variable
+100.00%   38.144      1 -total
+ 27.71%   10.569      1 Template:Userdocnavi/bg
+ 19.43%    7.411      5 Template:Code
+ 13.99%    5.336      1 Template:PropertyData
+ 12.41%    4.734      1 Template:TOCright
+  8.71%    3.323     78 Template:Incode
+  8.13%    3.103      1 Template:Variable
+  7.52%    2.868      1 Template:Navigation_menu_2
+  3.90%    1.486      4 Template:KEY
+  3.00%    1.146      3 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412656-0!canonical and timestamp 20260126100816 and revision id 1744198. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412656-0!canonical and timestamp 20260126101145 and revision id 1744200. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
