--- a/wiki/bg/Object_name.html
+++ b/wiki/bg/Object_name.html
@@ -30,8 +30,9 @@
 <li>&#1057;&#1083;&#1077;&#1076; &#1082;&#1072;&#1090;&#1086; &#1086;&#1073;&#1077;&#1082;&#1090;&#1098;&#1090; &#1073;&#1098;&#1076;&#1077; &#1080;&#1079;&#1090;&#1088;&#1080;&#1090;, &#1085;&#1077;&#1075;&#1086;&#1074;&#1086;&#1090;&#1086; &#1080;&#1084;&#1077; <code>Name</code> &#1089;&#1090;&#1072;&#1074;&#1072; &#1076;&#1086;&#1089;&#1090;&#1098;&#1087;&#1085;&#1086; &#1079;&#1072; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1085;&#1077; &#1086;&#1090; &#1085;&#1086;&#1074;&#1086;&#1089;&#1098;&#1079;&#1076;&#1072;&#1076;&#1077;&#1085; &#1086;&#1073;&#1077;&#1082;&#1090;. &#1058;&#1086;&#1074;&#1072; &#1086;&#1079;&#1085;&#1072;&#1095;&#1072;&#1074;&#1072;, &#1095;&#1077; &#1072;&#1082;&#1086; <code>Box</code>, <code>Box001</code>}, &#1080; <code>Box002</code> &#1089;&#1098;&#1097;&#1077;&#1089;&#1090;&#1074;&#1091;&#1074;&#1072;&#1090;, &#1080; &#1080;&#1079;&#1090;&#1088;&#1080;&#1077;&#1084; &#1087;&#1098;&#1088;&#1074;&#1080;&#1103; &#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090;, &#1089;&#1083;&#1077;&#1076;&#1074;&#1072;&#1097;&#1086;&#1090;&#1086; &#1087;&#1086;&#1083;&#1077;, &#1089;&#1098;&#1079;&#1076;&#1072;&#1076;&#1077;&#1085;&#1086; &#1089; <a href="../Part_Box.html" title="Part Box">Part Box</a>, &#1085;&#1103;&#1084;&#1072; &#1076;&#1072; &#1073;&#1098;&#1076;&#1077; <code>Box003</code>, &#1072; &#1097;&#1077; &#1073;&#1098;&#1076;&#1077; &#1086;&#1090;&#1085;&#1086;&#1074;&#1086; <code>Box</code>, &#1079;&#1072;&#1097;&#1086;&#1090;&#1086; &#1090;&#1086;&#1079;&#1080; &#1085;&#1080;&#1079; &#1077; &#1085;&#1072;&#1083;&#1080;&#1095;&#1077;&#1085;, &#1079;&#1072; &#1076;&#1072; &#1089;&#1077; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; &#1086;&#1090;&#1085;&#1086;&#1074;&#1086;. &#1047;&#1072;&#1073;&#1077;&#1083;&#1077;&#1078;&#1077;&#1090;&#1077;, &#1095;&#1077; &#1085;&#1077; &#1077; &#1074;&#1098;&#1079;&#1084;&#1086;&#1078;&#1085;&#1086; &#1076;&#1072; &#1087;&#1088;&#1077;&#1080;&#1084;&#1077;&#1085;&#1091;&#1074;&#1072;&#1090;&#1077; <code>Box001</code> &#1080;&#1083;&#1080; <code>Box002</code> &#1085;&#1072; <code>Box</code>, &#1090;&#1098;&#1081; &#1082;&#1072;&#1090;&#1086; &#1080;&#1084;&#1077;&#1085;&#1072;&#1090;&#1072; &#1089;&#1072; &#1092;&#1080;&#1082;&#1089;&#1080;&#1088;&#1072;&#1085;&#1080;.</li></ul>
 </div>
 <p>&#1042; &#1086;&#1073;&#1086;&#1073;&#1097;&#1077;&#1085;&#1080;&#1077;, <code>Name</code> &#1087;&#1086; &#1089;&#1098;&#1097;&#1077;&#1089;&#1090;&#1074;&#1086; &#1076;&#1077;&#1081;&#1089;&#1090;&#1074;&#1072; &#1082;&#1072;&#1090;&#1086; &#1091;&#1085;&#1080;&#1082;&#1072;&#1083;&#1077;&#1085; &#1080;&#1076;&#1077;&#1085;&#1090;&#1080;&#1092;&#1080;&#1082;&#1072;&#1090;&#1086;&#1088; (UID) &#1079;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;. &#1058;&#1098;&#1081; &#1082;&#1072;&#1090;&#1086; &#1091;&#1085;&#1080;&#1082;&#1072;&#1083;&#1085;&#1086;&#1090;&#1086; &#1080;&#1084;&#1077; <code>Name</code> &#1077; &#1084;&#1085;&#1086;&#1075;&#1086; &#1086;&#1075;&#1088;&#1072;&#1085;&#1080;&#1095;&#1080;&#1090;&#1077;&#1083;&#1085;&#1086;, &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1089;&#1098;&#1097;&#1086; &#1080;&#1084;&#1072;&#1090; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1086; <code>Label</code>, &#1082;&#1086;&#1077;&#1090;&#1086; &#1087;&#1086;&#1079;&#1074;&#1086;&#1083;&#1103;&#1074;&#1072; "&#1087;&#1088;&#1077;&#1080;&#1084;&#1077;&#1085;&#1091;&#1074;&#1072;&#1085;&#1077;" &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1072; &#1085;&#1072; &#1085;&#1077;&#1097;&#1086; &#1087;&#1086;-&#1086;&#1087;&#1080;&#1089;&#1072;&#1090;&#1077;&#1083;&#1085;&#1086;. &#1042;&#1098;&#1090;&#1088;&#1077;&#1096;&#1085;&#1086;&#1090;&#1086; &#1080;&#1084;&#1077; <code>Name</code> &#1074;&#1089;&#1098;&#1097;&#1085;&#1086;&#1089;&#1090; &#1086;&#1089;&#1090;&#1072;&#1074;&#1072; &#1092;&#1080;&#1082;&#1089;&#1080;&#1088;&#1072;&#1085;&#1086;, &#1085;&#1086; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1103;&#1090; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072; <code>Label</code>, &#1080; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1089;&#1077; &#1075;&#1086; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; &#1074; &#1087;&#1086;&#1074;&#1077;&#1095;&#1077;&#1090;&#1086; &#1089;&#1080;&#1090;&#1091;&#1072;&#1094;&#1080;&#1080;, &#1074; &#1082;&#1086;&#1080;&#1090;&#1086; &#1097;&#1077; &#1089;&#1077; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; &#1080; <code>Name</code>. &#1042; &#1086;&#1073;&#1097;&#1072; &#1091;&#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1072; &#1074; &#1087;&#1088;&#1086;&#1075;&#1088;&#1072;&#1084;&#1072;&#1090;&#1072; &#1080; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1072;&#1094;&#1080;&#1103;&#1090;&#1072;, "&#1087;&#1088;&#1077;&#1080;&#1084;&#1077;&#1085;&#1091;&#1074;&#1072;&#1085;&#1077;" &#1086;&#1079;&#1085;&#1072;&#1095;&#1072;&#1074;&#1072; &#1087;&#1088;&#1086;&#1084;&#1103;&#1085;&#1072; &#1085;&#1072; <code>Label</code>, &#1072; &#1085;&#1077; &#1076;&#1077;&#1081;&#1089;&#1090;&#1074;&#1080;&#1090;&#1077;&#1083;&#1085;&#1086;&#1090;&#1086; &#1080;&#1084;&#1077; <code>Name</code> &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1072;.
+</p><p><span id="Labels"></span>
 </p>
-<h2><span class="mw-headline" id="Labels">Labels</span></h2>
+<h2><span id=".D0.95.D1.82.D0.B8.D0.BA.D0.B5.D1.82.D0.B8"></span><span class="mw-headline" id="&#1045;&#1090;&#1080;&#1082;&#1077;&#1090;&#1080;">&#1045;&#1090;&#1080;&#1082;&#1077;&#1090;&#1080;</span></h2>
 <p>There are various properties for Labels:
 </p>
 <ul><li>The <code>Label</code> can accept any UTF8 string, including accents and spaces.</li>
@@ -117,13 +118,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126101145
+Cached time: 20260126101208
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.069 seconds
-Real time usage: 0.182 seconds
-Preprocessor visited node count: 711/1000000
+CPU time usage: 0.067 seconds
+Real time usage: 0.133 seconds
+Preprocessor visited node count: 712/1000000
 Post&#8208;expand include size: 9272/2097152 bytes
 Template argument size: 3253/2097152 bytes
 Highest expansion depth: 7/100
@@ -133,19 +134,19 @@ Unstrip post&#8208;expand size: 6904/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.144      1 -total
- 27.71%   10.569      1 Template:Userdocnavi/bg
- 19.43%    7.411      5 Template:Code
- 13.99%    5.336      1 Template:PropertyData
- 12.41%    4.734      1 Template:TOCright
-  8.71%    3.323     78 Template:Incode
-  8.13%    3.103      1 Template:Variable
-  7.52%    2.868      1 Template:Navigation_menu_2
-  3.90%    1.486      4 Template:KEY
-  3.00%    1.146      3 Template:MenuCommand
+100.00%   44.674      1 -total
+ 25.29%   11.297      1 Template:PropertyData
+ 18.02%    8.052      1 Template:Userdocnavi/bg
+ 17.71%    7.910      5 Template:Code
+ 10.73%    4.794      1 Template:Variable
+  8.49%    3.791     78 Template:Incode
+  7.05%    3.150      1 Template:Navigation_menu_2
+  3.50%    1.565      1 Template:TOCright
+  3.11%    1.387      4 Template:KEY
+  2.35%    1.050      3 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412656-0!canonical and timestamp 20260126101145 and revision id 1744200. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412656-0!canonical and timestamp 20260126101208 and revision id 1744202. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
