--- a/wiki/it/Macro_BoundingBox_Tracing.html
+++ b/wiki/it/Macro_BoundingBox_Tracing.html
@@ -535,12 +535,8 @@ else:
 </pre></div>
 <p>Versione: 0.8 Data: 05/10/2018: upgrade la ver 0.8 compatibile con FC 0.17 (getGlobalPlacement)
 </p><p>Versione: 0.7 Data: 28/01/2018: corretto errore con accento etichetta "nameLabel  = unicodedata.normalize('NFKD', nameLabel).encode('ascii','ignore')"
-</p>
-<div class="mw-translate-fuzzy">
-<p>ver 0.6 le 08/08/2017: aggiunto testo info dimensioni , contener per retangoli, informazioni rettangolo, informazioni volume, &eacute; sezione configurazione color , label object selected
-</p>
-</div>
-<p>ver 0.5 le 08/05/2017&nbsp;: upgrade adesso acceta gli elementi "mesh" e "Points" grazie wmayer <a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?f=13&amp;t=22331">Makro Bounding-Box f&uuml;r STL importierte Teile und f&uuml;r Punktewolken</a>
+</p><p>Versione: 0.6 Data: 08/08/2017: aggiunto testo info dimensioni , contenitore per rettangoli, informazioni rettangolo, informazioni volume, aggiunto sezione configurazione colore, etichetta oggetto selezionato
+</p><p>ver 0.5 le 08/05/2017&nbsp;: upgrade adesso acceta gli elementi "mesh" e "Points" grazie wmayer <a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?f=13&amp;t=22331">Makro Bounding-Box f&uuml;r STL importierte Teile und f&uuml;r Punktewolken</a>
 </p>
 <div class="mw-translate-fuzzy">
 <p>ver 0.4  il 04/06/2016&nbsp;: testo se value = 0 allora non crea il boundbox (esempio: obietto Draft)
@@ -548,13 +544,13 @@ else:
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126100002
+Cached time: 20260126102227
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.075 seconds
-Real time usage: 0.363 seconds
-Preprocessor visited node count: 146/1000000
+CPU time usage: 0.037 seconds
+Real time usage: 0.055 seconds
+Preprocessor visited node count: 145/1000000
 Post&#8208;expand include size: 3492/2097152 bytes
 Template argument size: 26227/2097152 bytes
 Highest expansion depth: 5/100
@@ -564,14 +560,14 @@ Unstrip post&#8208;expand size: 30905/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   59.889      1 -total
- 35.48%   21.246      1 Template:Macro/it
- 24.43%   14.631      2 Template:Code
- 20.03%   11.998      1 Template:MacroCode
- 18.87%   11.301      2 Template:Caption
+100.00%    8.544      1 -total
+ 33.05%    2.824      1 Template:Macro/it
+ 25.16%    2.150      1 Template:MacroCode
+ 23.90%    2.042      2 Template:Code
+ 13.58%    1.160      2 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28637-0!canonical and timestamp 20260126100001 and revision id 1744192. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:28637-0!canonical and timestamp 20260126102227 and revision id 1744204. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
