--- a/wiki/it/Macro_CenterOfMass.html
+++ b/wiki/it/Macro_CenterOfMass.html
@@ -1,4 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro CenterOfMass/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+CenterOfMass&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
+<li><a href="../de/Macro_CenterOfMass.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Massenschwerpunkt (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_CenterOfMass.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro CenterOfMass (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_CenterOfMass.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro CenterOfMass (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/Macro_CenterOfMass.html" class="mw-pt-progress mw-pt-progress--med" title="Macro CenterOfMass (27% translated)" lang="hr" dir="ltr">hrvatski</a></li>
@@ -123,9 +124,9 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 <p>Selezionare gli oggetti
 </p>
 </div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Available_Options">Available Options</span></h3>
-</div>
+<p><span id="Available_Options"></span>
+</p>
+<h3><span class="mw-headline" id="Opzioni_disponibili">Opzioni disponibili</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li>Color the solids according to density.</li>
 <li>Display the location of the center of mass.</li>
@@ -245,31 +246,31 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20251009172031
+Cached time: 20260126102604
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.063 seconds
-Real time usage: 0.081 seconds
+CPU time usage: 0.050 seconds
+Real time usage: 0.122 seconds
 Preprocessor visited node count: 148/1000000
 Post&#8208;expand include size: 2916/2097152 bytes
 Template argument size: 694/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2384/5000000 bytes
+Unstrip post&#8208;expand size: 2556/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    6.353      1 -total
- 36.13%    2.295      1 Template:Macro/it
- 18.15%    1.153      1 Template:Codeextralink
- 16.37%    1.040      1 Template:ComboBox
- 13.05%    0.829      1 Template:FileName
- 12.31%    0.782      1 Template:MenuCommand
+100.00%   14.786      1 -total
+ 22.17%    3.278      1 Template:Macro/it
+ 21.57%    3.190      1 Template:Codeextralink
+ 19.15%    2.831      1 Template:ComboBox
+ 17.64%    2.608      1 Template:FileName
+ 16.98%    2.510      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20251009172031 and revision id 1659719. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:116128-0!canonical and timestamp 20260126102604 and revision id 1744210. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
